Bug 89591 - Remove right alignment O_o what is was doing here

--- a/BatchEditor.css
+++ b/BatchEditor.css
@@ -1,3 +1,2 @@
 .addpages { margin-top: -1em; float: right; }
 .addpages div { display: block; float: none; padding: 2px; text-align: left; }
-.addpages div.ap_catname { text-align: right; }
